--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -11,15 +11,16 @@
 
   <ion-item>
     <ion-label position="floating">Email</ion-label>
-    <ion-input  type="text" name="email"></ion-input>
+    <ion-input  [(ngModel)]="email" type="text" name="email"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating" >Password</ion-label>
-    <ion-input  type="password" name="password"> </ion-input>
+    <ion-input  [(ngModel)]="password" type="password" name="password"> </ion-input>
   </ion-item>
 
   <ion-button (click)="onSubmitLogin()" expand="block">Sing In</ion-button>
+
 
 
 </ion-content>
